--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
   },
   "scripts": {
     "watch": "npm-watch",
-    "serve": "nodemon server.js",
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
