--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "scripts": {
     "watch": "npm-watch",
+    "serve": "nodemon server.js",
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
