--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "watch": "npm-watch",
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "npm-watch"
   },
   "watch": {
     "build": {
